Bug fix: date picker z-index is less than markdown editor content area, so it appears below when date field is above markdown field

--- a/src/themes/earl-grey/components/_datepicker.scss
+++ b/src/themes/earl-grey/components/_datepicker.scss
@@ -14,3 +14,7 @@
 .SingleDatePickerInput__withBorder {
   border: 1px solid #cacccd;
 }
+
+.SingleDatePicker_picker {
+  z-index: 2;
+}
